add_library( engine Application.cpp Camera.cpp Creator.cpp Error.cpp Event.cpp EventListener.cpp EventManager.cpp Font.cpp GameLogic.cpp GameLoop.cpp GameObject.cpp GameView.cpp Math.cpp Menu.cpp Mesh.cpp Process.cpp ProcessManager.cpp SceneNode.cpp ScreenLayer.cpp ScreenLayer_Scene.cpp Shader.cpp Texture.cpp Tickmeter.cpp UniqueNumberGenerator.cpp VideoSystem_SDL_OpenGL.cpp)
